# solar-system-simulation

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: camera.h  camera.hpp  shader.h  shader.hpp  simulation.hpp  space-object.hpp
include/glad/: glad.h
shaders/: fragment.glsl  vertex.glsl
src/: camera.cpp  glad.c  main.cpp  shader.cpp  simulation.cpp  space-object.cpp
